test/users/ssridhar/atomic/test_fail_type_mismatch_in_atomic.chpl
var x: uint(64);
proc main() {
  var y: int; 
  coforall i in 1..10 do
    atomic {
      x = x + 1;
      y = x;
    }
  writeln(x);
}

